--- a/StationProject/Components/Dialogs/AddCategoryDialog.razor
+++ b/StationProject/Components/Dialogs/AddCategoryDialog.razor
@@ -1,7 +1,7 @@
 @using StationProject.Data.Models
 @inject DialogService DialogService
 
-<EditForm Model="Category" OnValidSubmit="@Submit">
+<EditForm Model="Category" OnValidSubmit="@Submit" class="f-column gap-10">
     <DataAnnotationsValidator/>
 
     <div class="form-group">
