--- a/StationProject/Components/Pages/AdminTabs/UsersComponent.razor
+++ b/StationProject/Components/Pages/AdminTabs/UsersComponent.razor
@@ -21,7 +21,7 @@
                         <p style="font-size: 16px;">Confirmed: @(user.EmailConfirmed ? "Yes" : "No")</p>
                     </div>
                 </div>
-                @* <button class="btn btn-danger" style="align-self: center" @onclick="() => DeleteUser(user.Id)" @onclick:stopPropagation="true">Удалить</button> *@
+                <button class="btn btn-danger" style="align-self: center" @onclick="() => DeleteUser(user)" @onclick:stopPropagation="true">Удалить</button>
             </div>
         }
     </div>
@@ -33,8 +33,8 @@
 
     protected override async Task OnInitializedAsync()
     {
-        // Roles = await _db.Roles.ToListAsync();
-        // Users = await _db.Users.ToListAsync();
+        Roles = await _db.Roles.ToListAsync();
+        Users = await _db.Users.Include(x => x.Orders).ToListAsync();
     }
 
     private async Task EditUser(ApplicationUser user)
@@ -48,16 +48,11 @@
         }
     }
 
-    private async Task DeleteUser(string id)
+    private async Task DeleteUser(ApplicationUser user)
     {
-        var userToDelete = await _db.Users.FindAsync(id);
-
-        if (userToDelete != null)
-        {
-            _db.Users.Remove(userToDelete);
-            await _db.SaveChangesAsync();
-            Users.Remove(userToDelete); // Remove from local list
-        }
+        _db.Users.Remove(user);
+        await _db.SaveChangesAsync();
+        Users.Remove(user); // Remove from local list
     }
 
     private async Task<string> GetUserRole(ApplicationUser user)
