--- a/StationProject/Components/UI/FooterCustom.razor
+++ b/StationProject/Components/UI/FooterCustom.razor
@@ -13,19 +13,23 @@
             </div>
             <div class="f-column">
                 <a href="\AboutPage" class="footer-link-important">О нас</a>
-                <a href="#" class="footer-link">Вакансии</a>
+                <a href="https://kurgan.hh.ru/search/vacancy?hhtmFrom=main&hhtmFromLabel=vacancy_search_line&search_field=name&search_field=company_name&search_field=description&text=%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D1%87%D0%B8%D0%BA+C%23&enable_snippets=false&L_save_area=true" class="footer-link">Вакансии</a>
             </div>
         </div>
 
-        <div class="f-column">
+        <div class="f-column gap-10">
             <span class="follow-us-text">Следите за нами</span>
             <div class="f-row gap-10">
-                
+                <img style="width: 28px; height: 28px" src="images/tg.svg"/>
+                <img style="width: 28px; height: 28px" src="images/vk.svg"/>
+                <img style="width: 28px; height: 28px" src="images/whatsapp.svg"/>
             </div>
             
             <span class="follow-us-text">Способы оплаты</span>
             <div class="f-row gap-10">
-                
+                <img style="width: 32px; height: 32px" src="images/mir-logo.svg"/>
+                <img style="width: 32px; height: 32px" src="images/tpay.svg"/>
+                <img style="height: 32px" src="images/sberpay.svg"/>
             </div>
         </div>
 
