--- a/StationProject/Components/Dialogs/ProductDialog.razor
+++ b/StationProject/Components/Dialogs/ProductDialog.razor
@@ -1,7 +1,7 @@
 @using StationProject.Data.Models
 @inject DialogService DialogService
 
-<EditForm Model="@Product" OnValidSubmit="@Submit">
+<EditForm Model="@Product" OnValidSubmit="@Submit" class="f-column gap-10">
     <DataAnnotationsValidator/>
 
     <div class="form-group">
@@ -11,12 +11,12 @@
 
     <div class="form-group">
         <label>Количество на складе:</label>
-        <InputNumber @bind-Value="Product.CountId" class="form-control"/>
+        <InputNumber @bind-Value="Product.Count.Count" class="form-control"/>
     </div>
 
     <div class="form-group">
         <label>Цена продукта:</label>
-        <InputNumber @bind-Value="Product.PriceId" class="form-control"/>
+        <InputNumber @bind-Value="Product.Price.Value" class="form-control"/>
     </div>
 
     <div class="form-group">
@@ -39,14 +39,12 @@
         </InputSelect>
     </div>
 
-    <!-- Image URL input -->
     <div class="form-group">
         <label>URL изображения:</label>
         <InputText @bind-Value="newImageUrl" class="form-control" Placeholder="Введите URL изображения"/>
         <button type="button" class="btn btn-secondary mt-2" @onclick="@AddImageUrl">Добавить изображение</button>
     </div>
 
-    <!-- Display added images -->
     @if (Product.Images.Any())
     {
         <h5>Добавленные изображения:</h5>
