--- a/StationProject/Components/Layout/MainLayout.razor
+++ b/StationProject/Components/Layout/MainLayout.razor
@@ -2,6 +2,7 @@
 @inherits LayoutComponentBase
 
 <RadzenComponents @rendermode="InteractiveServer"/>
+<RadzenNotification />
 
 <div class="page">
     <div class="sidebar">
