--- a/StationProject/Components/Pages/AdminTabs/ProductsComponent.razor.css
+++ b/StationProject/Components/Pages/AdminTabs/ProductsComponent.razor.css
@@ -1,5 +1,5 @@
 .categories-section {
-    padding: 20px;
+    margin-top: 20px;
 }
 
 .category-chips {
@@ -73,4 +73,17 @@
 .category-item:hover {
     cursor: pointer; /* Change cursor to pointer on hover */
     box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1); /* Box shadow effect */
+}
+
+.dialog-b button {
+	background-color: #3973e1; /* Initial background color */
+	border-radius: 24px;
+	color: #e4e9f1;
+	font-weight: bold;
+	font-size: 32px;
+	padding: 20px 20px;
+	cursor: pointer;
+	text-decoration: none;
+	border: none; /* Remove default border */
+	transition: background-color 0.1s ease; /* Smooth transition for background and border */
 }
